--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "burhan",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "uuid": "^9.0.1"
   }
